--- a/block-BHaacf/style.css
+++ b/block-BHaacf/style.css
@@ -71,6 +71,11 @@ body{
     justify-content: space-between;
     align-items: center;
 }
+.center{
+display: flex;
+justify-content: center;
+align-items: center;
+}
 .heading{
     background-color: rgba(102, 109, 117,0.6);
     color: var(--white);
@@ -104,6 +109,12 @@ a:hover{
     padding: 10px 16px;
     font-weight: 300;
 }
+.btn:hover{
+    box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+    opacity: 0.8;
+    color: white;
+}
+
 figure video{
     width: 100%;
 }
@@ -119,11 +130,6 @@ figure video{
     text-transform: uppercase;
     text-align: center;
     color: var(--white);
-    position: absolute;
-    top: 270px;
-    bottom: 0px;
-    right: 0px;
-    left: 0px;
 }
 .btn-primary{
     text-decoration: none;
@@ -181,7 +187,7 @@ h5{
     align-items: flex-start;
 }
 h6{
-    font-size: 19px;
+    font-size: 16px;
     font-weight: 600;
 }
 .program-types p{
@@ -192,6 +198,7 @@ h6{
 .content{
     text-align: left;
     margin-left: 40px;
+    font-size: 14px;
 }
 .heading-section{
     text-align: center;
@@ -285,7 +292,7 @@ margin: 20px 0;
     background: url("./assets/schedule-bg.jpg") no-repeat center;
     background-size: cover;
     width: 100%;
-    height: 800px;
+    height: 900px;
 }
 .schedule-section{
     color: var(--white);
@@ -298,7 +305,7 @@ margin: 20px 0;
     padding-top: 100px;
 }
 .days-link{
-    margin-top: 60px;
+    margin: 40px 0;
 }
 .days-link a{
     text-decoration: none;
@@ -350,17 +357,19 @@ margin-right: 20px;
 .bg-img3{
     background: url("./assets/contact-bg.jpg") no-repeat center;
     background-size: cover;
-    height: 450px;
+    height: 600px;
     width: 740px
 }
 .form-detail{
     background-color: var(--white);
     padding: 24px;
+    width: 88%;
+    position: absolute;
+    right: 27px;
+    bottom: 100px;
+    border-radius: 8px;
 }
-.form-map{
-    background-color: white;
-    padding: 23px;
-}
+
 .form-control{
     display: block;
     width: 100%;
@@ -377,4 +386,28 @@ margin-right: 20px;
     font-weight: 200;
     
 }
+.send-button{
+    margin-top: 20px;
+}
+.required:after {
+    content:" *";
+    color: red;
+  }
+.footer{
+      color:#242d39;
+      text-align: center;
+      font-size: 14px;
+      padding: 30px;
+  }
+table,td{
+    border: 1px solid var(--white);
+    margin-top: 20px;
+    padding: 30px;
+    text-align: center;
+    margin: 0 auto;
+} 
+.juustify-content{
+    justify-content: center;
+}
+
 
